--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,10 @@ list(APPEND SOURCE_FILES src/display/gas_container.cc
         src/physics/collision_physics.cc
         src/components/histogram.cc)
 
-list(APPEND TEST_FILES tests/particle_test.cc tests/gas_container_test.cc tests/collision_physics_test.cc)
+list(APPEND TEST_FILES tests/particle_test.cc
+        tests/gas_container_test.cc
+        tests/collision_physics_test.cc
+        tests/histogram_test.cc)
 
 ci_make_app(
         APP_NAME gas-simulation
